# dsa-visualizer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  linked_list.md  prompt.txt
apps/: CMakeLists.txt  main.cpp
src/dsa/: CMakeLists.txt  binary_search.h  binary_tree.h  bst.h  bubble_sort.h  doubly_linked_list.h  graph.h  linear_search.h  lru_cache.h  maze.h  min_heap.h  queue.h  quick_sort.h  ring_buffer.h  singly_linked_list.h  stack.h  trie.h  two_crystal_balls.h
src/viz/: CMakeLists.txt  algo_recorder.h  array_viz.h  code_panel.h  common.h  config_overlay.h  graph_code_panel.h  graph_config.h  graph_recorder.h  graph_snapshot.h  graph_viz.h  heap_code_panel.h  heap_config.h  heap_recorder.h  heap_snapshot.h  heap_viz.h  list_code_panel.h  list_config.h  list_recorder.h  list_snapshot.h  list_viz.h  lru_code_panel.h  lru_config.h  lru_recorder.h  lru_snapshot.h  lru_viz.h  maze_code_panel.h  maze_config.h  maze_recorder.h  maze_snapshot.h  maze_viz.h  ring_buffer_code_panel.h  ring_buffer_config.h  ring_buffer_recorder.h  ring_buffer_snapshot.h  ring_buffer_viz.h  snapshot.h  stack_queue_code_panel.h  stack_queue_config.h  stack_queue_recorder.h  (+15 more)
tests/: CMakeLists.txt  test_binary_search.cpp  test_bubble_sort.cpp  test_doubly_linked_list.cpp  test_graph_viz_recordings.cpp  test_heap_viz_recordings.cpp  test_linear_search.cpp  test_list_viz_recordings.cpp  test_lru_viz_recordings.cpp  test_maze_viz_recordings.cpp  test_queue.cpp  test_ring_buffer.cpp  test_ring_buffer_viz_recordings.cpp  test_singly_linked_list.cpp  test_stack.cpp  test_stack_queue_viz_recordings.cpp  test_tree_viz_recordings.cpp  test_trie_viz_recordings.cpp  test_two_crystal_balls.cpp  test_viz_recordings.cpp
